# local_pcangsd

./: .gitignore  README.md  conda_env.yaml  example.ipynb  pyproject.toml  setup.cfg
.github/workflow/: documentation.yaml
docs/: conf.py  index.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/usage/: installation.doctree  quickstart.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/usage/: installation.html  quickstart.html
src/: lp_cli.py
src/local_pcangsd/: __init__.py  corners.R  corners.py  local_pcangsd.py
