[tool.poetry]
name = "local-pcangsd"
version = "0.0.2"
description = "Perform local PCA on low-coverage data."
authors = ["Alexis Simon <alexis.simon@normalesup.org>"]
readme = "README.md"
packages = [
  { include = "local_pcangsd", from = "src"}
]
license = "MIT"
classifiers = [
    'Development Status :: 1 - Planning',
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "*"
xarray = "*"
sgkit = "*"
pandas = "*"
scipy = "*"
pcangsd = { git = "https://github.com/alxsimon/pcangsd" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
