[metadata]
name = local_pcangsd
version = 0.0.1
author = Alexis Simon
author_email = alexis.simon@normalesup.org
description = Local PCAngsd
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alxsim/local_pcangsd
project_urls =
    Bug Tracker = https://github.com/alxsim/local_pcangsd/issues
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    local_pcangsd = lp_cli:main